editors/tree-sitter-guml/grammar.js
    document: ($) => repeat(choice($.comment, $._blank, $._statement)),

    _blank: ($) => $._newline,

    // `content_element` before `element`, so `tier`/`faq` take the rule that knows their body is verbatim.
    _statement: ($) => choice($.directive, $.escape_block, $.content_element, $.element),

    directive: ($) =>
      choice($.page, $.type_decl, $.state_decl, $.data_decl, $.def_decl),

    page: ($) =>
      seq("page", field("name", $.identifier), repeat($.attribute), $._newline),

    state_decl: ($) =>
      seq(
        choice("state", "store"),
        field("name", $.identifier),
        "=",
        // `all|open|done` is an enumerated domain; a single value is just an initial value.
        seq($._value, repeat(seq("|", $._value))),
        $._newline,
      ),

    data_decl: ($) =>
      seq(
        "data",
        field("name", $.identifier),
        optional(seq(":", $.type_ref)),
        field("method", $.method),
        field("url", $.route),
        $._newline,
        optional(seq($._indent, repeat1(choice($.mutation, $._blank)), $._dedent)),
      ),

    mutation: ($) =>
      seq(
        field("name", $.identifier),
        field("method", $.method),
        field("url", $.route),
        optional($.brace_group),
        optional(seq("optimistic", optional(seq(":", $.identifier)))),
        $._newline,
      ),

    method: () => choice("GET", "POST", "PUT", "PATCH", "DELETE", "HEAD"),
    type_ref: ($) => seq($.identifier, optional("[]")),

    /* -------------------------------------------------------- escape hatches */

    // Matched before any tag, because `js`/`raw` are the way *out* of the vocabulary rather than part
    // of it. The body is `_raw_line`, so nothing inside is parsed as GUML.
    escape_block: ($) =>
      seq(
        choice("js", seq("raw", optional(field("target", $.identifier)))),
        $._newline,
        optional(seq($._verbatim_indent, repeat1(choice($.raw_line, $._blank)), $._dedent)),
      ),

    raw_line: ($) => seq($._raw_line, $._newline),

    /* -------------------------------------------------------------- elements */

    // The line remainder below is duplicated between `element` and `content_element` on purpose.
    //
    // It was extracted into a shared `_line_rest` rule, which tree-sitter rejects outright: every part of
    // it is optional, so the rule can match the empty string, and a syntactic rule that can do that is not
    // allowed anywhere but the start rule. Six lines twice is the cost of that constraint.
    //
    // `identifier` covers both a bare label and a modifier. They are the *same token*, and only the
    // registry can tell them apart — `ghost` is a modifier, `Decrement` is a label, and nothing lexical
    // distinguishes them. A separate `modifier` rule made the grammar ambiguous, which is the correct
    // answer: colouring a bare word as a modifier is the language server's job, from `guml highlight`.
    element: ($) =>
      seq(
        field("tag", $.tag),
        // Positionals and attributes in ONE repeat, interleaved, because that is what GUML allows:
        // `tier Hobby $0/mo "For side projects" cta="Start free" /signup` puts a positional route after a
        // keyed attribute. Two consecutive repeats — all positionals, then all attributes — rejected that
        // line, and it is a line in `fixtures/c.guml`. `attribute` first so the one-token lookahead on
        // `=` is resolved toward it.
        repeat(choice($.attribute, $.binding, $.route, $.anchor, $.string, $.number, $.identifier)),
        optional($.action),
        optional(choice(seq("|", $.content), $.prose)),
        $._newline,
        // Element children only. `content_line` used to be a `choice` alternative here, which is what
        // made the whole thing unparseable — see `content_element` below.
        optional(seq($._indent, repeat1(choice($.comment, $._blank, $._statement)), $._dedent)),
      ),

    // `tier` and `faq`: the two tags whose indented children are *content lines* rather than elements.
    //
    // # Why this is its own rule with literal tag names
    //
    // The body shape used to be a `choice` inside `element`, which meant an element child and a content
    // line were both valid at the same position. tree-sitter resolved that at generation time in favour
    // of the element, so `_raw_line` was not in the state's valid set at all — a `js` body parsed as GUML
    // and `content_line` was a rule nothing could ever match.
    //
    // Splitting the *token* into `_indent`/`_verbatim_indent` was necessary and not sufficient: the
    // scanner still had to know which body it was opening, and it tried to remember that from the line
    // above. It cannot. tree-sitter only persists external-scanner state for a call that **returns a
    // token**, and the `tier` header line returns none — so the flag set while reading `tier` was
    // discarded before the body line was reached.
    //
    // Naming the two tags here removes the need to remember anything: after a `tier` header only
    // `_verbatim_indent` is valid, so the scanner reads which indent the *grammar* wants out of
    // `valid_symbols` and emits that. The dependency runs the right way round, and the scanner keeps no
    // cross-line state.
    //
    // These two names are the one place this grammar hardcodes vocabulary. That is a real cost, and the
    // alternative — remembering the parent tag across lines — is not available. `guml registry` prints
    // `content-children:` so `scripts/gen-tags.mjs` can assert this list has not grown.
    content_element: ($) =>
      seq(
        field("tag", alias(choice("tier", "faq"), $.tag)),
        // Positionals and attributes in ONE repeat, interleaved, because that is what GUML allows:
        // `tier Hobby $0/mo "For side projects" cta="Start free" /signup` puts a positional route after a
        // keyed attribute. Two consecutive repeats — all positionals, then all attributes — rejected that
        // line, and it is a line in `fixtures/c.guml`. `attribute` first so the one-token lookahead on
        // `=` is resolved toward it.
        repeat(choice($.attribute, $.binding, $.route, $.anchor, $.string, $.number, $.identifier)),
        optional($.action),
        $._newline,
        optional(seq($._verbatim_indent, repeat1(choice($.content_line, $._blank)), $._dedent)),
      ),

    content_line: ($) => seq($._raw_line, $._newline),

    // Not enumerated. The tag set is not fixed at grammar-writing time: a host can load its own
    // registry, and a document can declare components with `def`. Deciding whether a tag *resolves* is
    // the language server's job, not this grammar's.
    tag: ($) => $.identifier,

    attribute: ($) => seq(field("name", $.identifier), "=", field("value", $._value)),

    _value: ($) => choice($.string, $.number, $.boolean, $.binding, $.identifier),

    // `>` consumes the rest of the line by construction, which is what makes an action lexable in one
    // pass — and why it must be last.
    action: ($) => seq(">", $.action_body),
    action_body: () => token.immediate(/[^\n]*/),

    prose: ($) => $._prose,
    brace_group: () => token(seq("{", /[^}]*/, "}")),

    string: () => token(seq('"', repeat(choice(/[^"\\]/, seq("\\", /./))), '"')),
    // Declared *before* `identifier`, and that ordering is what disambiguates them.
    //
    // `identifier` below is as permissive as the compiler's word rule, so it matches `24` and `/signup`
    // too. tree-sitter resolves a token conflict by match length first and then by declaration order, so
    // `24` (equal length) comes back as a `number` and `2026-05` (longer) as an identifier — which is
    // exactly the compiler's rule: "a digit run followed immediately by word bytes is a word".
    //
    // These carried `token(prec(1, …))` for one revision, and that is a different mechanism with a
    // different answer: *lexical* precedence is checked before length, so `number` won even when shorter
    // and `state cohort=2026-05|…` lexed as the number `2026` followed by an error. `3px` and `2xl` — both
    // named in `guml_syntax::is_word_byte`'s own doc comment — were broken the same way. Found by pointing
    // `check:fixtures` at the reference corpus, not by the hand-written cases.
    number: () => /-?\d+(\.\d+)?/,
    route: () => token(seq("/", /[^\s]*/)),
    identifier: () => /[^\s"{}|=:,>#]+/,
  },
});
